# btcblock

./: .clang-format  .editorconfig  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  block.cpp  block.h  main.cpp  script.cpp  script.h
src/util/: crypto.h  misc.cpp  misc.h
test/: Makefile.am  test_script.cpp
utils/crypto/: Makefile.am  ripemd160.c  ripemd160.h  sha2.c  sha2.h
utils/crypto/btc/: Makefile.am  base58.c  base58.h  chainparams.h  script.h  segwit_addr.c  segwit_addr.h
